--- a/progettoFlask/templates/index.html
+++ b/progettoFlask/templates/index.html
@@ -8,7 +8,7 @@
         <div align="center">
           <div align="center" class="border">
              <div class="header">
-                <h1 class="word">Benvenuto {{username}}</h1>
+                <h1 class="word">Benvenuto {{username}}  topolino:{{pippo}}</h1>
 		<h1 class="word">Dati utente</h1>
 		<form action="{{ url_for('update') }}" method="post">
 			<input type="color" id="color" name="color" value="{{color}}"></br></br>
