--- a/progettoFlask/templates/login.html
+++ b/progettoFlask/templates/login.html
@@ -15,7 +15,12 @@
                   <div class="msg">{{ msg }}</div>
                     <input id="username" name="username" type="text" placeholder="Enter Your Username" class="textbox" required/></br></br>
                     <input id="password" name="password" type="password" placeholder="Enter Your Password" class="textbox" required/></br></br></br>
-                    <input type="submit" class="btn" value="Sign In"></br></br>
+		    <select name="building" id="buildings" required>
+			{% for building in buildings%}
+				<option value={{building.id_building}}>Edificio: {{building.city}}</option>
+			{%endfor%}
+			                    <input type="submit" class="btn" value="Sign In"></br></br>
+  		    </select>
                 </form>
             </h2>
             <p class="bottom">Don't have an account?  <a class="bottom" href="{{url_for('register')}}"> Sign Up here</a></p>
