--- a/progettoFlask/templates/select.html
+++ b/progettoFlask/templates/select.html
@@ -3,13 +3,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Dashboard schifosa</title>  
+        <title>Selezione edificio</title>  
     </head>
     <body></br></br></br></br></br>
         <div align="center">
           <div align="center" class="border">
              <div class="header">
-                <h1 class="word">Registrazione</h1>
+                <h1 class="word">Seleziona l'edificio</h1>
              </div></br></br></br>
             <h2 class="word">
                 <form action="{{ url_for('occupyRoom') }}" method="post">
@@ -22,8 +22,11 @@
 		    <input type="submit" class="btn" value="Occupa"></br>
                 </form>
             </h2>
-            <p class="bottom">Hai già un account?  <a class="bottom" href="{{url_for('login')}}">Accedi qui</a></p>
-          </div>
+            <form action="{{ url_for('logout') }}" method="post">
+                  <div>logout</div>
+                    <input type="submit" class="btn" value="Logout"></br></br>
+                </form>
+	 </div>
         </div>
     </body>
 </html>
