patch con fixini

--- a/server/progettoFlask/templates/index.html
+++ b/server/progettoFlask/templates/index.html
@@ -114,6 +114,9 @@
                     <input type="submit" class="btn" value="Logout"></br></br>
                 </form>
 		
+            <p class="bottom">Aggiorna dati utente<a class="bottom" href="{{url_for('updateuserdata')}}">Clicca qui</a></p>
+            
+            <p class="bottom">Aggiorna le credenziali<a class="bottom" href="{{url_for('updatecredentials')}}">Clicca qui</a></p>
             </h2>
           </div>
         </div>
