--- a/server/progettoFlask/templates/dashboard.html
+++ b/server/progettoFlask/templates/dashboard.html
@@ -1,4 +1,7 @@
 <html>
+<head>Dashboard
+<link rel="stylesheet" href="{{ url_for('static', filename='universal.css') }}">
+</head>
 <body>
     <h1>{{header}}</h1>
     <h2 ><a href="{{link}}">Ritorna alla pagina precedente</a></h2>
