--- a/server/progettoFlask/templates/login.html
+++ b/server/progettoFlask/templates/login.html
@@ -2,11 +2,45 @@
     <head>
         <meta charset="UTF-8">
         <title> Login </title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">          
+        <style>
+       input[type=text],input[type=password], select {
+          width: 100%;
+          padding: 12px 20px;
+          margin: 8px 0;
+          display: inline-block;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          box-sizing: border-box;
+        }
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+div,form {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 50px;
+}
+
+
+
+
+
+        </style>
     </head>
-    <body></br></br></br></br></br>
-        <div align="center">
-          <div align="center" class="border">
+    <body> <div>
              <div class="header">
                 <h1 class="word">Login</h1>
              </div></br></br></br>
@@ -15,12 +49,10 @@
                   <div class="msg">{{ msg }}</div>
                     <input id="username" name="username" type="text" placeholder="Enter Your Username" class="textbox" required/></br></br>
                     <input id="password" name="password" type="password" placeholder="Enter Your Password" class="textbox" required/></br></br></br>
-		    <input type="submit" class="btn" value="Sign In"></br></br>
-  		    </select>
+		            <input type="submit" value="Sign In"></br></br>
                 </form>
             </h2>
             <p class="bottom">Don't have an account?  <a class="bottom" href="{{url_for('register')}}"> Sign Up here</a></p>
-          </div>
         </div>
     </body>
 </html>
