--- a/server/progettoFlask/templates/register.html
+++ b/server/progettoFlask/templates/register.html
@@ -3,7 +3,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Dashboard schifosa</title>  
+        <title> Registrazione</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='universal.css') }}">
     </head>
     <body></br></br></br></br></br>
         <div align="center">
