--- a/server/progettoFlask/templates/login.html
+++ b/server/progettoFlask/templates/login.html
@@ -2,43 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Login </title>
-        <style>
-       input[type=text],input[type=password], select {
-          width: 100%;
-          padding: 12px 20px;
-          margin: 8px 0;
-          display: inline-block;
-          border: 1px solid #ccc;
-          border-radius: 4px;
-          box-sizing: border-box;
-        }
-
-input[type=submit] {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-div,form {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 50px;
-}
-
-
-
-
-
-        </style>
+        <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mainpage.css') }}">
     </head>
     <body> <div>
              <div class="header">
