plis fixati la view

--- a/server/progettoFlask/templates/newcredentials.html
+++ b/server/progettoFlask/templates/newcredentials.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Dashboard schifosa</title>  
+        <title> Dashboard</title>
     </head>
     <body></br></br></br></br></br>
         <div align="center">
