--- a/server/progettoFlask/templates/admin/index.html
+++ b/server/progettoFlask/templates/admin/index.html
@@ -1,5 +1,15 @@
 {% extends 'admin/master.html' %}
-<head>Admin</head>
+<head><title>Admin</title>
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <style>
+        body {
+         background-image: url({{ url_for('static', filename='Files/pic2-transformed.jpeg')}});
+         background-color: #cccccc;
+        }
+    </style>
+
+</head>
 {{ super() }}
 
 {% block body %}
