--- a/server/progettoFlask/templates/dashboard.html
+++ b/server/progettoFlask/templates/dashboard.html
@@ -1,6 +1,8 @@
 <html>
 <head>Dashboard
-<link rel="stylesheet" href="{{ url_for('static', filename='universal.css') }}">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <h1>{{header}}</h1>
