--- a/server/progettoFlask/templates/index.html
+++ b/server/progettoFlask/templates/index.html
@@ -2,7 +2,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Index</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='universal.css') }}">
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<style>
+        body {
+         background-image: url({{ url_for('static', filename='Files/pic2-transformed.jpeg')}});
+         background-color: #cccccc;
+         background-size: 100% 100%;
+        background-repeat: no-repeat;
+        }
+        input[type=button], input[type=submit], input[type=reset] {
+          background-color: #04AA6D;
+          border: none;
+          color: white;
+          padding: 16px 32px;
+          text-decoration: none;
+          margin: 4px 2px;
+          cursor: pointer;
+        }</style>
     </head>
     <body></br></br></br></br></br>
         <div align="center">
@@ -107,11 +124,14 @@
                   <div>logout</div>
                     <input type="submit" class="btn" value="Logout"></br></br>
                 </form>
+				{%if admin == 1%}
+					<form action="/admin">
+						<input type="submit" class="btn" value="Schermata Admin" />
+					</form></br></br>
+				{% endif %}
             </h2>
           </div>
         </div>
-	{%if admin == 1%}
-	<h2 ><a href="/admin">Apri la schermata Admin</a></h2>
-	{% endif %}
+
     </body>
 </html>
