--- a/server/progettoFlask/templates/newselect.html
+++ b/server/progettoFlask/templates/newselect.html
@@ -5,6 +5,8 @@
   <title>Flask Leaflet Website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/universal.css') }}" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -12,14 +14,54 @@
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
   crossorigin=""></script>
+  <style>
+        body {
+         background-image: url({{ url_for('static', filename='Files/pic2-transformed.jpeg')}});
+         background-color: #cccccc;
+         background-size: 100% 100%;
+        background-repeat: no-repeat;
+         min-height: 100%;
+        height: 100%;
+          width: 100%;
+        }
+        input[type=button], input[type=submit], input[type=reset] {
+          background-color: #04AA6D;
+          border: none;
+          color: white;
+          padding: 16px 32px;
+          text-decoration: none;
+          margin: 4px 2px;
+          cursor: pointer;
+        }
+        .container {
+          display: flex;
+          justify-content: center;
+           top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+        }
+        #map {
+            margin-left: auto !important;
+            margin-right: auto !important;
+            margin-top: 10% !important;
+        }
+
+  </style>
 </head>
 
 <body>
-  <div id="map"></div>
-  <form action="{{ url_for('logout') }}" method="post">
-    <div>logout</div>
-      <input type="submit" class="btn" value="Logout"></br></br>
-  </form>
+<div class="container">
+    <div id="map" class="center" ></div></br></br>
+    <form action="{{ url_for('logout') }}" method="post">
+        <input type="submit" class="btn" value="Logout"></br></br>
+    </form>
+                {%if admin == 1%}</br>
+                      <form action="/admin">
+                          <input type="submit" class="btn" value="Schermata Admin" />
+                      </form></br></br>
+                  {% endif %}
+
   <script src="{{ url_for('static', filename='js/universal.js') }}" /></script>
   <script>
 
@@ -38,9 +80,7 @@
 // Set map's center to target with zoom 14.
       map.setView(target, 9);
   </script>
-    {%if admin == 1%}
-	<h2 ><a href="/admin">Apri la schermata Admin</a></h2>
-	{% endif %}
+</div>
 </body>
 
 </html>
