--- a/server/progettoFlask/templates/register.html
+++ b/server/progettoFlask/templates/register.html
@@ -4,7 +4,25 @@
     <head>
         <meta charset="UTF-8">
         <title> Registrazione</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='universal.css') }}">
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <style>
+        body {
+         background-image: url({{ url_for('static', filename='Files/pic2-transformed.jpeg')}});
+         background-color: #cccccc;
+         background-size: 100% 100%;
+        background-repeat: no-repeat;
+        }
+        input[type=button], input[type=submit], input[type=reset] {
+          background-color: #04AA6D;
+          border: none;
+          color: white;
+          padding: 16px 32px;
+          text-decoration: none;
+          margin: 4px 2px;
+          cursor: pointer;
+        }
+    </style>
     </head>
     <body></br></br></br></br></br>
         <div align="center">
@@ -27,8 +45,8 @@
 			{% for job in jobs%}
       				<option value={{job.id_profession}}>{{job.name}}</option>
   			{% endfor %}
-		    </select>
-		    <input type="submit" class="btn" value="Occupa"></br>
+		    </select></br>
+		    <input type="submit" class="btn" value="Registrati"></br>
                 </form>
             </h2>
             <p class="bottom">Hai già un account?  <a class="bottom" href="{{url_for('homepage')}}">Accedi qui</a></p>
