--- a/server/progettoFlask/templates/dashboard.html
+++ b/server/progettoFlask/templates/dashboard.html
@@ -1,15 +1,43 @@
 <html>
-<head>Dashboard
+<head>
+    <title>Dashboard</title>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<style>
+    .mybutton {
+        background-color: #04AA6D;
+        border: none;
+        color: white;
+        padding: 16px 32px;
+        text-decoration: none;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 10px;
+      }
 
+    </style>
 </head>
-<body>
+<body       style = "background-image: url({{ url_for('static', filename='Files/pic2-transformed.jpeg')}}); margin-bottom: 30px; background-size: 100% 100%;
+background-repeat: no-repeat;">
+<div class="container" style = "padding: 30px">
+
+    <div class="d-flex justify-content-center" style = "margin-bottom: 30px">
+
     <h1>{{header}}</h1>
-    <h2 ><a href="{{link}}">Ritorna alla pagina precedente</a></h2>
+    </div>
+    <div class="d-flex justify-content-center" style = "margin-bottom: 30px">
+    <p ><a class = "mybutton" href="{{link}}">Ritorna alla pagina precedente</a></p>
+    </div>
+
     {%for graphJSON in graphsJSON%}
+    <div class="container-fluid" style="background-color: white;border-radius: 30px; margin-bottom: 20px; padding:15px">
+        <div class="center">
         <div id="chart{{loop.index}}" class="chart{{loop.index}}"></div>
+        </div>
+    </div>
     {%endfor%}
+
+</div>
 </body>
 
 
