--- a/server/progettoFlask/templates/admin/index.html
+++ b/server/progettoFlask/templates/admin/index.html
@@ -13,12 +13,12 @@
 {{ super() }}
 
 {% block body %}
-<h7>Schermata Home Admin</h7>
+<h7 align="center">Schermata Home Admin</h7>
 <div>
-  <form action="{{ url_for('logout') }}" method="post">
+  <form action="{{ url_for('logout') }}" align="center "method="post">
       <input type="submit" class="btn" value="Logout"></br></br>
   </form>
-  <form action="{{ url_for('homepage') }}" method="post">
+  <form action="{{ url_for('homepage') }}" align="center"method="post">
       <input type="submit" class="btn" value="Torna alla homepage"></br></br>
   </form>
 </div>
