--- a/server/progettoFlask/templates/index.html
+++ b/server/progettoFlask/templates/index.html
@@ -26,8 +26,18 @@
         <div align="center">
           <div align="center" class="border">
              <div class="header">
-		<h1>Temperatura esterna: {{weather['temperature']}}</h1>
-		<h1>Umidità esterna: {{weather['humidity']}}%</h1>
+
+	<div class= "container" style="background-color:white; border-radius:10px">
+	<div class="d-flex justify-content-center">
+		<p>Temperatura esterna: {{weather['temperature']}}</p>
+	</div>
+	<div class="d-flex justify-content-center">
+		<p>Umidità esterna: {{weather['humidity']}}%</p>
+	</div>
+</div>
+
+
+	
 		<p>Stanza occupata:{{digitalTwin.id_room}}</p>
 		<form action="{{ url_for('update') }}" method="post">
 			<p>Colore luce:</p>
